--- a/Nisha_2211566_Assignment_10A_NLP.ipynb
+++ b/Nisha_2211566_Assignment_10A_NLP.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO0yOFYNjIZ/3F+koOgMGP1",
+      "authorship_tag": "ABX9TyP794pYZHr1kIxazB8yaT3x",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,6 +40,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "The 20 Newsgroups data set is a collection of approximately 20,000 newsgroup documents, partitioned (nearly) evenly across 20 different newsgroups. To the best of my knowledge, it was originally collected by Ken Lang, probably for his Newsweeder: Learning to filter netnews paper, though he does not explicitly mention this collection. The 20 newsgroups collection has become a popular data set for experiments in text applications of machine learning techniques, such as text classification and text clustering."
+      ],
+      "metadata": {
+        "id": "azb2pvmn0zb5"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from sklearn.datasets import fetch_20newsgroups"
@@ -47,7 +56,7 @@
       "metadata": {
         "id": "wlZY-dayXG9G"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -59,8 +68,17 @@
       "metadata": {
         "id": "0ypLqeZEXpm6"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**The shuffle() method takes a sequence, like a list, and reorganize the order of the items. Note: This method changes the original list, it does not return a new list.**"
+      ],
+      "metadata": {
+        "id": "YIf12J1B0_mR"
+      }
     },
     {
       "cell_type": "code",
@@ -71,7 +89,7 @@
       "metadata": {
         "id": "1JIW3EGoXuum"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -86,7 +104,7 @@
         "id": "-zFFsSYqZFXE",
         "outputId": "f9ff8e5b-0d08-429d-bb60-1f1e3e962734"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -109,7 +127,7 @@
         "id": "BF1YyG3Ycf0w",
         "outputId": "bcb7a770-3a05-4547-e36e-f8c6f876d948"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -125,6 +143,25 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### **Gensim = “Generate Similar” is a popular open source natural language processing (NLP) library used for unsupervised topic modeling. It uses top academic models and modern statistical machine learning to perform various complex tasks such as − Building document or word vectors.**"
+      ],
+      "metadata": {
+        "id": "yP3pPhSq1Mkn"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Stop words are a set of commonly used words in a language. Examples of stop words in English are “a”, “the”, “is”, “are” and etc. Stop words are commonly used in Text Mining and Natural Language Processing (NLP) to eliminate words that are so commonly used that they carry very little useful information.**\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "4O4Ni6W21Oiz"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import gensim\n",
@@ -134,8 +171,17 @@
       "metadata": {
         "id": "b17fppGIZMDe"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**WordNet is the lexical database i.e. dictionary for the English language, specifically designed for natural language processing. Synset is a special kind of a simple interface that is present in NLTK to look up words in WordNet. Synset instances are the groupings of synonymous words that express the same concept**"
+      ],
+      "metadata": {
+        "id": "qiwmkek81lLT"
+      }
     },
     {
       "cell_type": "code",
@@ -150,7 +196,7 @@
         "id": "ZcUj52HWZ_sf",
         "outputId": "291d5331-d379-4555-f44f-15c76255b301"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -172,6 +218,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Snowball Stemmer is also known as the Porter2 stemming algorithm because it is a better version of the Porter Stemmer. It is more aggressive than Porter Stemmer.**"
+      ],
+      "metadata": {
+        "id": "I_AfIp-e12WO"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from nltk.stem import WordNetLemmatizer, SnowballStemmer\n",
@@ -182,7 +237,7 @@
       "metadata": {
         "id": "p7uxBql8ZNEQ"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -198,7 +253,7 @@
         "id": "uFGwTFGsebXF",
         "outputId": "63d195a8-8718-475b-a68a-67e4b482aef6"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -232,7 +287,7 @@
         "id": "GfTSAXlgerHY",
         "outputId": "53ed7ead-c6cf-4dbc-f14e-307d4efb149a"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -265,7 +320,7 @@
         "id": "9xlWgmOzeckb",
         "outputId": "d52ae957-f329-4a69-c1c4-ba2aa48cc217"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -285,7 +340,7 @@
       "metadata": {
         "id": "e0DxiEEid7Km"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -299,7 +354,7 @@
       "metadata": {
         "id": "XLXZW4gbfNvT"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -315,7 +370,7 @@
         "id": "LmWy17_mfTHR",
         "outputId": "122c9c80-c570-460b-c9a6-46f6f83bddd9"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -559,7 +614,7 @@
       "metadata": {
         "id": "vAjlgJRqff7Y"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -577,7 +632,7 @@
       "metadata": {
         "id": "tjKgWacehCLu"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -589,7 +644,7 @@
       "metadata": {
         "id": "uAXYO45IhFwb"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -604,7 +659,7 @@
         "id": "EyUWFYj2hmfb",
         "outputId": "73017f16-089c-4308-be3c-ef4773dd91ec"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -631,7 +686,7 @@
         "id": "YcP8kDnCixlE",
         "outputId": "e9ce2ef4-ddd5-43a7-e89a-91e9faa87460"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -655,7 +710,7 @@
         "id": "mPHwUoDgjAUh",
         "outputId": "d1f580d7-2fc3-4ff8-b867-d7aca08f7d2d"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -686,7 +741,7 @@
         "id": "7mnirij7jB1w",
         "outputId": "58176969-35be-474e-aa94-f4e0490888d7"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -705,7 +760,7 @@
       "metadata": {
         "id": "D8pAg2F2jwhQ"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -727,7 +782,7 @@
         "id": "TX4DPIX9kEbh",
         "outputId": "b11bb8ff-bbee-4770-f2c1-47d46d9a34c2"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -839,6 +894,21 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Gensim filter_extremes​filter_extremes(no_below=5, no_above=0.5, keep_n=100000)​Filter out tokens that appear in​\n",
+        "\n",
+        "less than no_below documents (absolute number) or\n",
+        "\n",
+        "more than no_above documents (fraction of total corpus size, not absolute number).\n",
+        "\n",
+        "after (1) and (2), keep only the first keep_n most frequent tokens (or keep all if None). "
+      ],
+      "metadata": {
+        "id": "bBwvai0Z2rRI"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "dictionary.filter_extremes(no_below = 15, no_above = 0.1, keep_n = 10000)"
@@ -846,7 +916,7 @@
       "metadata": {
         "id": "ao-0Mci2kc7D"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -869,7 +939,7 @@
         "id": "y8VldqMxjNaH",
         "outputId": "efb59c8d-79cf-4017-933b-5f5bee794b75"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -916,6 +986,41 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### **Running LDA using Bag of Words**\n",
+        "We are going for 10 topics in the document corpus.\n",
+        "\n",
+        "We will be running LDA using all CPU cores to parallelize and speed up model training.\n",
+        "\n",
+        "**Some of the parameters we will be tweaking are: **\n",
+        "\n",
+        "num_topics is the number of requested latent topics to be extracted from the training corpus.\n",
+        "\n",
+        "\n",
+        "id2word is a mapping from word ids (integers) to words (strings). It is used to determine the vocabulary size, as well as for debugging and topic printing.\n",
+        "\n",
+        "workers is the number of extra processes to use for parallelization. Uses all available cores by default.\n",
+        "\n",
+        "alpha and eta are hyperparameters that affect sparsity of the document-topic (theta) and topic-word (lambda) distributions. We will let these be the default values for now(default value is 1/num_topics)\n",
+        "\n",
+        "Alpha is the per document topic distribution.\n",
+        "\n",
+        "High alpha: Every document has a mixture of all topics(documents appear similar to each other).\n",
+        "\n",
+        "Low alpha: Every document has a mixture of very few topics\n",
+        "Eta is the per topic word distribution.\n",
+        "\n",
+        "High eta: Each topic has a mixture of most words(topics appear similar to each other).\n",
+        "Low eta: Each topic has a mixture of few words.\n",
+        "\n",
+        "passes is the number of training passes through the corpus. For example, if the training corpus has 50,000 documents, chunksize is 10,000, passes is 2, then online training is done in 10 updates:"
+      ],
+      "metadata": {
+        "id": "qeuXTJ3n3NH7"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "lda_model =  gensim.models.LdaMulticore(bow_corpus,\n",
@@ -927,7 +1032,7 @@
       "metadata": {
         "id": "55TNWS-uk8H3"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -944,7 +1049,7 @@
         "id": "Ca50NvS_lSGK",
         "outputId": "6be8a150-e5b1-4a06-fdac-7b5cf4b3d995"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
