--- a/Nisha_2211566_Sagemaker_Clinical_record_dataset.ipynb
+++ b/Nisha_2211566_Sagemaker_Clinical_record_dataset.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMB4rJbIKjQ+z6E9JX3pF7o",
+      "authorship_tag": "ABX9TyO04VwI5rP0oisJ6inH/Lie",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "fTUV-BLy90Be"
       },
@@ -82,7 +82,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Set up S3 Bucket for the OfflineStore"
+        "## Set up S3 Bucket for the OfflineStore"
       ],
       "metadata": {
         "id": "hC3PiiyoAwqH"
@@ -106,7 +106,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Set up IAM Role"
+        "## Set up IAM Role"
       ],
       "metadata": {
         "id": "XKQxzpE0Bi4v"
@@ -197,7 +197,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Create a unique ID for each patient"
+        "### Create a unique ID for each patient"
       ],
       "metadata": {
         "id": "kYXd31GLEPka"
@@ -274,7 +274,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Create a TimeStamp for each record"
+        "## Create a TimeStamp for each record"
       ],
       "metadata": {
         "id": "6hdm8o_xE4tn"
@@ -298,7 +298,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Check data types for each column"
+        "## Check data types for each column"
       ],
       "metadata": {
         "id": "tRuMPZHGFdvJ"
@@ -336,7 +336,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Create Features"
+        "# Create Features"
       ],
       "metadata": {
         "id": "EVAEzJBPF8lZ"
@@ -345,7 +345,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Assign a feature  group name"
+        "## Assign a feature  group name"
       ],
       "metadata": {
         "id": "UkIlwQBHKM-f"
@@ -367,7 +367,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Create a FeatureGroup"
+        "## Create a FeatureGroup"
       ],
       "metadata": {
         "id": "B1eaWDQCKX0T"
@@ -389,7 +389,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Define Identifier"
+        "## Define Identifier"
       ],
       "metadata": {
         "id": "F5ygIL__KmDi"
@@ -411,7 +411,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Load feature definations to the feature group"
+        "## Load feature definations to the feature group"
       ],
       "metadata": {
         "id": "Z3raIynlLPcb"
@@ -431,7 +431,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Create Feature Group"
+        "## Create Feature Group"
       ],
       "metadata": {
         "id": "XSb4sLj1LnQm"
@@ -468,7 +468,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Work with your FeatureGroup"
+        "## Work with your FeatureGroup"
       ],
       "metadata": {
         "id": "IgOCvQPlMK0y"
@@ -499,7 +499,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Put Records into the Feature Store"
+        "## Put Records into the Feature Store"
       ],
       "metadata": {
         "id": "KcIdV3IiMuTI"
@@ -521,7 +521,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Get Records from a Feature Group"
+        "## Get Records from a Feature Group"
       ],
       "metadata": {
         "id": "cCNjIIMaQhCV"
@@ -543,7 +543,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Generate Hive DDL Commands"
+        "## Generate Hive DDL Commands"
       ],
       "metadata": {
         "id": "Nwcby5ZPQ99o"
@@ -595,7 +595,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "BUILD A TRAINING DATASET"
+        "## BUILD A TRAINING DATASET"
       ],
       "metadata": {
         "id": "u4-YA1zzSPD-"
@@ -648,7 +648,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Preparing dataset for training"
+        "## Preparing dataset for training"
       ],
       "metadata": {
         "id": "OClySdbpS9iB"
